force-app/main/default/objects/Opportunity/fields/GAUSERID__c.field-meta.xml
<CustomField>
    <fullName>GAUSERID__c</fullName>
    <label>GAUSERID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>