force-app/main/default/objects/Opportunity/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lower Priority</fullName>
            </value>
            <value>
                <fullName>Higher Priority</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>