force-app/main/default/objects/Opportunity/validationRules/Lock_Closed_Won_Opps.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Closed_Won_Opps</fullName>
    <active>true</active>
    <description>This validation rule is used to Lock the closed-won Opportunities.</description>
    <errorConditionFormula>AND ( ISPICKVAL( StageName , &apos;Closed Won&apos;), 
NOT( $Permission.Custom_Permission_for_Opp_Edit )
)</errorConditionFormula>
    <errorMessage>You cannot edit a Closed Won Opportunity</errorMessage>
</ValidationRule>